src/objects/Old_Referral_Code__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Old Referral Codes</relationshipLabel>
        <relationshipName>Old_Referral_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Old Referral Codes</relationshipLabel>
        <relationshipName>Old_Referral_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Code__c</fullName>
        <label>Referral Code</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Old Referral Code</label>
    <nameField>
        <displayFormat>ORC-{00000}</displayFormat>
        <label>Old Referral Codes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Old Referral Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>